9273
As far as I understand super[A] isn't a valid type by itself. E.g. 
```scala
scala> trait A
defined trait A

scala> type T = super[A];
<console>:1: error: '.' expected but ';' found.
       type T = super[A];
                        ^
```

And you'll get exactly the same error in the quasiquote:
```scala
scala> tq"super[A]"
<console>:27: error: '.' expected but end of quote found.
              tq"super[A]"
                         ^
```

So this doesn't look like a bug to me.
